Minor changes to index.html (issue #6)

--- a/03 LiveReload/src/index.html
+++ b/03 LiveReload/src/index.html
@@ -5,7 +5,7 @@
     <title></title>
   </head>
   <body>
-    <h1>Hello Gulp soy Antonio !</h1>
+    <h1>Hello Gulp!</h1>
     <!-- build:js-->
     <script src="./calculator.js"></script>
     <script src="./main.js"></script>
