Minor fix. Adding a build html called 'sass' and using that to replace in 'generate-prod-html' task

--- a/04 SASS/src/index.html
+++ b/04 SASS/src/index.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="utf-8">
     <title></title>
-    <link rel="stylesheet" href="main.css">
+    <!-- build:sass-->
+<link rel="stylesheet" href="main.scss">
+<!-- endbuild -->
+
   </head>
   <body>
     <h1>Hello Gulps !</h1>
